objects/Fornecedor__c.object
<CustomObject>
    <description>Objeto para pesquisa de fornecedores em contratos, é alimentado por trigger na conta.</description>
    <fields>
        <fullName>CNPJ__c</fullName>
        <label>CNPJ</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codigo_do_Fornecedor_AN8__c</fullName>
        <label>Código do Fornecedor (AN8)</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Razao_social__c</fullName>
        <label>Razão social</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telefone__c</fullName>
        <label>Telefone</label>
        <type>Phone</type>
    </fields>
    <label>Fornecedor</label>
    <nameField>
        <label>Nome do Fornecedor</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fornecedores</pluralLabel>
    <recordTypes>
        <fullName>BRA_Standard</fullName>
        <active>true</active>
        <description>Brazil standard record type</description>
        <label>BRA Standard</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>